2004-03-02  Martin Fuchs  <martin-fuchs@gmx.net>

	* include/oleauto.h (VAR_VALIDDATE, VAR_FORMAT_NOSUBSTITUTE,
	VAR_FOURDIGITYEARS) Define new constants. Group VAR_*  defines
	together.
	(V_UI2, V_UI4, V_UI4REF, V_UI, V_UI8REF) Define macros.
	(V_I8, V_I8REF): Correct macros.
	(V_DECIMAL): Correct macro deginitions.
	(V_INT_PTR, V_UINT_PTR, V_INT_PTRREF, V_UINT_PTRREF): Define
	constants.
	(VTBIT_*): Define constants.
	(UDATE): Add structure definition.
	(VarDateFromUdate, VarDateFromUdateEx, VarUdateFromDate): Declare
	functions.
	(SafeArrayCreateVector): Correct parameter type from UINT to ULONG
	(SafeArrayCreateVectorEx): Declare function.
	(Var*): declare VARIANT manipulation functions.
	* include/ocidl.h (IPicture_*): Define IPicture COBJ macros.
	* include/oaidl.h (IRecordInfo_*): Define IRecordInfo COBJ
	macros.

2004-03-01  Martin Fuchs  <martin-fuchs@gmx.net>

	* include/oaidl.h (FADF_*) Define missing constants.
	(IDispatch_*): Define COBJ macros.
	(VARIANT): Add missing union members llVal and ullVal.
	(wireVARIANT): Likewise.
	(ITypeinfo_*): Define COBJ macros.
	* include/oleauto.h (Var*FromDisp): Correct parameter type from
	LPDISPATCH* to LPDISPATCH.
	(VARCMP_*, VAR_LOCALBOOL, LOCALE_USE_NLS, VARIANT_*,
	VAR_CALENDAR_*): Add missing constants.
	(SafeArray[Get/Set]*): Add prototypes.
	(Var*From*):  Add missing prototypes.
	(NUMPRS_*): Add defines.
	(NUMPARSE): Define structure.
	(VarParseNumFromStr,VarNumFromParseNum): Add prototypes.
	* include/winerror.h (DISP_E_DIVBYZERO): Define constant.
	* include/winuser.h (COLOR_*): Define missing constants.
	* include/wtypes.h (enum VARENUM) Add VT_INT_PTR, VT_UINT_PTR.
 	(VT_INT_PTR, VT_UINT_PTR): Remove macro definitions.

2004-02-23  Filip Navara  <xnavara@volny.cz>

	* include/ddk/video.h: Corrected packing.

2004-02-19  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/Gl/glu (GLU_ERROR): Define.
	Thanks to Philip Lamb  <phil at rave dot co dot nz> 
