@@ -1,3 +1,7 @@
+2004-03-02  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* basetyps.h (GUID_SECT): Define to nothimg for GCC >= 2.95.
+
 2004-03-02  Martin Fuchs  <martin-fuchs@gmx.net>
 
 	* include/oleauto.h (VAR_VALIDDATE, VAR_FORMAT_NOSUBSTITUTE,
